--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12485,6 +12485,10 @@ textarea.form-control-lg {
   max-height: 100%;
 }
 
+.chatroom {
+  color: white;
+}
+
 footer {
   background-color: #282C34;
   color: #ABB2BF;
