--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12517,10 +12517,20 @@ textarea.form-control-lg {
   background-color: #1E1E1E;
 }
 
-#chat-title {
+.chat-header {
   background-color: #323232;
   padding: 10px;
   border-radius: 10px 10px 0 0;
+}
+
+#chat-change-mode {
+  color: #814863;
+}
+
+#chat-change-mode:hover {
+  color: #e181ab;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 footer {
