--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -747,8 +747,42 @@ $terminal-error: $secondary;
 
 #chat-change-mode:hover {
   color: #e181ab;
-  text-decoration: underline;
   cursor: pointer;
+}
+
+#chat-change-mode.active {
+  color: #e181ab;
+}
+
+.chatpill {
+  display: inline-block;
+  padding: 8px 12px;
+  border-radius: 20px;
+  background-color: #f8f9fa;
+  cursor: pointer;
+  white-space: nowrap;
+  border: 1px solid #ddd;
+  flex-shrink: 0; /* Prevent pills from shrinking */
+}
+.chatpill:hover {
+  background-color: #e2e6ea;
+}
+.scrollable-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  display: flex;
+  gap: 8px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  scroll-snap-type: x mandatory;
+}
+.scrollable-container::-webkit-scrollbar {
+  height: 6px;
+}
+.scrollable-container::-webkit-scrollbar-thumb {
+  background: #bbb;
+  border-radius: 3px;
 }
 
 footer {
