--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12551,24 +12551,8 @@ textarea.form-control-lg {
   background-color: #e2e6ea;
 }
 
-.scrollable-container {
-  overflow-x: auto;
-  white-space: nowrap;
-  display: flex;
-  gap: 8px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  scroll-snap-type: x mandatory;
-}
-
-.scrollable-container::-webkit-scrollbar {
-  height: 6px;
-}
-
-.scrollable-container::-webkit-scrollbar-thumb {
-  background: #bbb;
-  border-radius: 3px;
+#pickup-lines {
+  background-color: #323232;
 }
 
 footer {
