--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -787,22 +787,19 @@ $terminal-error: $secondary;
 }
 
 .custom-tooltip {
-  visibility: hidden;
+  position: fixed; /* Makes it stay above other elements */
   background-color: black;
   color: white;
   text-align: center;
-  padding: 5px 10px;
+  padding: 6px 10px;
   border-radius: 5px;
-  position: absolute;
-  bottom: 100%; /* Show above the image */
-  left: 50%;
-  transform: translateX(-50%);
-  white-space: nowrap;
   font-size: 12px;
-  z-index: 10;
-  opacity: 0;
-  transition: opacity 0.2s ease-in-out;
+  white-space: nowrap;
+  z-index: 1000; /* Ensures it's above everything */
+  display: none; /* Initially hidden */
+  pointer-events: none; /* Prevents blocking mouse events */
 }
+
 
 .tooltip-wrapper:hover .custom-tooltip {
   visibility: visible;
