--- a/sass/custom.css
+++ b/sass/custom.css
@@ -12325,8 +12325,8 @@ textarea.form-control-lg {
 }
 
 .rank-intern {
-  color: #56B6C2;
-  border: #56B6C2 solid 1px;
+  color: #5685c2;
+  border: #5685c2 solid 1px;
 }
 
 .rank-salesforceworker {
